@@ -37,6 +37,7 @@ Version 1.5
  - Pull Request #870 - New device Popp KFOB and PH-PSE02.eu Zipato Indoor Siren, missing config from RaymondNg2 (Nechry)
  - Issue #807 - Update doco to reflect correct values returned from Notifications
  - Pull Request #858 / Issue #847 - Fix for devices sending empty UserCodes from Binli71 (Justin)
+ - Issue #843 - Possible fix for setting Clock (Justin)
 
 Version 1.4
  - Released 10th Jan, 2016
